--- a/unity/UserSettings/Search.settings
+++ b/unity/UserSettings/Search.settings
@@ -8,6 +8,9 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
+	"last_search.3BE40471" = ""
+	"OpenInspectorPreview.3BE40471" = "0"
+	"currentGroup.3BE40471" = "all"
 }
 providers = {
 	find = {
@@ -59,6 +62,15 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	""
+	"t=EnemyTile"
+	"t:EnemyTile t:WallTile"
+	"t:WallTile"
+	"t:EnemyTile t:WallTile wa"
+	"t:EnemyTile"
+	"t:EnemyTile l:wall"
+	"t:EnemyTile enemy,wall"
+	"enemy,wall"
 ]
 searchItemFavorites = [
 ]
@@ -67,7 +79,7 @@ showSavedSearchPanel = false
 hideTabs = false
 expandedQueries = [
 ]
-queryBuilder = false
+queryBuilder = true
 ignoredProperties = "id;name;classname;imagecontentshash"
 helperWidgetCurrentArea = "all"
 disabledIndexers = ""
