--- a/unity/Assets/Levels/LEVEL_0001_v1.0.0_v3.MYTEST.ini
+++ b/unity/Assets/Levels/LEVEL_0001_v1.0.0_v3.MYTEST.ini
@@ -1,6 +1,6 @@
-# Unity Level Data v3.8
+# Unity Level Data v3.MYTEST
 # CORRECT TILES from 4_VISUALIZE_MAP
-# Export Date: 2025-08-17 03:25:33
+# Export Date: 2025-08-17 03:12:26
 [CELL_TYPES]
 # ID=Symbol,Name,Passable,Prefab_Index
 0=.,EMPTY,true,0
@@ -21,16 +21,6 @@ GRID_HEIGHT=25
 HOUDINI_SEED=312
 ROOM_COUNT=5
 ENEMY_DENSITY=0.511
-LOOT_DENSITY=1.7
-COIN_DENSITY=0.602
-HEALTH_DENSITY=0.463
-BREAKABLE_DENSITY=0.779
-EDGE_WALL_BIAS=0.53
-NOISE_SCALE=0.8
-NOISE_THRESHOLD=-0.1
-MIN_ROOM_SIZE=4
-MAX_ROOM_SIZE=8
-MIN_PLAYER_EXIT_DIST=20.9
 [GRID_ASCII]
 ########################
 ##B##################B##
