export fix & grid fix

--- a/unity/Assets/Levels/LEVEL_0001_v1.0.0_v3.8.ini
+++ b/unity/Assets/Levels/LEVEL_0001_v1.0.0_v3.8.ini
@@ -1,6 +1,15 @@
-# Unity Level Data v3.8
-# CORRECT TILES from 4_VISUALIZE_MAP
-# Export Date: 2025-08-17 03:25:33
+# === LEVEL DATASET v3.8 ===
+# Generator: Houdini 20.0.547
+# Export Date: 2025-08-17 14:10:03
+# Encoding: UTF-8
+# Levels: 1
+# Format: Incremental IDs with Suffix
+# ===================================
+
+# ===================================
+# LEVEL 0001 : Generated Level
+# ===================================
+
 [CELL_TYPES]
 # ID=Symbol,Name,Passable,Prefab_Index
 0=.,EMPTY,true,0
@@ -13,11 +22,24 @@
 7=H,HEALTH,true,7
 8=B,BREAKABLE,false,8
 9=X,STAIRS,true,9
-[LEVEL_CORRECT_TILES]
+
+# ===================================
+# LEVEL CONFIGURATION
+# ===================================
+
+[LEVEL_CONFIG]
 VERSION=v1.0.0
-LEVEL_NAME=Correct Tiles Level
-GRID_WIDTH=24
-GRID_HEIGHT=25
+FORMAT_VERSION=v3.8
+LEVEL_NAME=Generated Level
+LEVEL_ID=0001
+GRID_WIDTH=26
+GRID_HEIGHT=27
+
+# ===================================
+# GENERATION PARAMETERS
+# ===================================
+
+[GENERATION_PARAMS]
 HOUDINI_SEED=312
 ROOM_COUNT=5
 ENEMY_DENSITY=0.511
@@ -29,31 +51,42 @@ EDGE_WALL_BIAS=0.53
 NOISE_SCALE=0.8
 NOISE_THRESHOLD=-0.1
 MIN_ROOM_SIZE=4
-MAX_ROOM_SIZE=8
+MAX_ROOM_SIZE=11
 MIN_PLAYER_EXIT_DIST=20.9
+
+# ===================================
+# GRID DATA
+# ===================================
+
 [GRID_ASCII]
-########################
-##B##################B##
-#####B##B##########..H.#
-#B#########BB######..H.B
-B##B######BB..EC.##...HB
-######.....BH....#.....#
-######..CC.#FS...B..#B##
-#####B...EFB11..HB.H####
-##B###....H#1C......####
-######C111111.......####
-#####B#1BB##B#B...C.####
-#######1#######.....####
-........................
-B####B#1B#B####H...EB###
-B######1B###B#B.E..FB###
-#BBB###1####B#####B.B##B
-###....11111PH.C..F.B###
-###C.HE.######BBB#BB####
-###.C.H.#########B######
-##B.....##B#####B##B####
-###...C.##B#####B#######
-#BB..C..##BB#######B####
-#BBE...C##############B#
-###B#######B#####B######
-#B######################
+.B.....B......B.......B.B.
+#.#####.#####..#######.#.#
+##B#####B####.############
+B#BE...C.B###.#B###B####B#
+B##.C..H.B#B#.######B#B###
+B#B.C....####.##B########B
+##BH..C.CB###.#####B##B###
+##B.C...P####.######B#####
+###......####.############
+##B...C..####.#B##B#B#####
+##BC..E..####.##....B#####
+###..E.H.##BB.BB.H..######
+##B.........C..C.....B#B##
+##B#####...H.........##B##
+##B##..C....H.....EEC#####
+#####....H....CCEE...#####
+####B.......H.....H..#####
+#####....EHC.........#####
+#####...........EEB.C#BB#B
+#B###......H......B..C.H##
+####B##B##....H.S.##....##
+##B##########.####B#C...##
+#########B###.#####B...HB#
+#############.####BB##B###
+######B######.####B#######
+..........................
+####BB#######.####B#######
+
+# ===================================
+# END OF LEVEL 0001
+# ===================================
