multiple level exports internal script

--- a/unity/Assets/Levels/LEVEL_0002_v1.0.0_v4.2.ini
+++ b/unity/Assets/Levels/LEVEL_0002_v1.0.0_v4.2.ini
@@ -1,13 +1,13 @@
 # === LEVEL DATASET v4.2 ===
 # Generator: Houdini 20.0.547
-# Export Date: 2025-08-18 02:45:18
+# Export Date: 2025-08-18 02:45:20
 # Encoding: UTF-8
 # Levels: 1
 # Format: Incremental IDs with Suffix
 # ===================================
 
 # ===================================
-# LEVEL 0001 : Generated Level
+# LEVEL 0002 : Generated Level
 # ===================================
 
 [CELL_TYPES]
@@ -30,8 +30,8 @@
 [LEVEL_CONFIG]
 VERSION=v1.0.0
 FORMAT_VERSION=v4.2
-LEVEL_NAME=Generated Level 0001
-LEVEL_ID=0001
+LEVEL_NAME=Generated Level 0002
+LEVEL_ID=0002
 GRID_WIDTH=25
 GRID_HEIGHT=25
 
@@ -40,7 +40,7 @@ GRID_HEIGHT=25
 # ===================================
 
 [GENERATION_PARAMS]
-HOUDINI_SEED=209
+HOUDINI_SEED=210
 ROOM_COUNT=5
 ENEMY_DENSITY=0.511
 LOOT_DENSITY=3.86
@@ -59,32 +59,32 @@ MIN_PLAYER_EXIT_DIST=26.6
 # ===================================
 
 [GRID_ASCII]
-#####B###########B#######
-#########################
-B#################B######
-#############BB#BBBBB###B
-##B##########B..H..E...C#
-#############B.CC.HHC.C.#
-########B####B...HC.H...B
-##############..1111P...#
-#############B.11C.....CB
-#####B#BBBBB#B11....H...#
-#####B..E.HH.11H....HHC.B
-###B#BCC.EC.11CHE...EH..B
-###BBB.....11..C.C......B
-###BC.....11.H.H....H...#
-###B..H..11E.H.EE..HE.CHB
-###B.H.H11CHE...HEBBBBBBB
-###BC..11HE..C....B######
-###B..11...HE....CB######
-###BH11..H...E....B######
-###BHSC.....EH....B######
-###BBBBBBBBBBBBB#BB######
-B#B######################
-#########################
-####B##########B#########
+###########BBBBB##BBB####
+#####B#####B..H..C.HB####
+###########B..EE...E#####
+######B####B..111P.HB####
+###########B.11.H..CB####
+###BB#BBBBBB11EHH...BB###
+B#BBE.H.CHC11..H..HC.B##B
+.C.H.CC...11..HH.HHEFB###
+H..C..C..11H.....C.CHB###
+..HE...H11.....CHC...B###
+.C..H..11C....E....H.B###
+CHF.C.11.EC.HC.E....CB###
+C..CC11.H.H.H.H....E.B#B#
+....11C.....EHB..C...B###
+H.H11....F...HB#BBBBB####
+...S..H......HB##########
+BB#B......H.E.B###BB###B#
+###BBBBBBBBBBBB##########
+######################B##
 B########################
+#########################
+######B##################
+##################B##B###
+#########################
+################B########
 
 # ===================================
-# END OF LEVEL 0001
+# END OF LEVEL 0002
 # ===================================
