--- a/unity/Assets/Levels/LEVEL_0001_v1.0.0_v4.3.ini
+++ b/unity/Assets/Levels/LEVEL_0001_v1.0.0_v4.3.ini
@@ -1,6 +1,6 @@
-# === LEVEL DATASET v4.2 ===
+# === LEVEL DATASET v4.3 ===
 # Generator: Houdini 20.0.547
-# Export Date: 2025-08-18 02:45:18
+# Export Date: 2025-08-18 02:39:27
 # Encoding: UTF-8
 # Levels: 1
 # Format: Incremental IDs with Suffix
@@ -29,8 +29,8 @@
 
 [LEVEL_CONFIG]
 VERSION=v1.0.0
-FORMAT_VERSION=v4.2
-LEVEL_NAME=Generated Level 0001
+FORMAT_VERSION=v4.3
+LEVEL_NAME=Generated Level
 LEVEL_ID=0001
 GRID_WIDTH=25
 GRID_HEIGHT=25
@@ -40,14 +40,14 @@ GRID_HEIGHT=25
 # ===================================
 
 [GENERATION_PARAMS]
-HOUDINI_SEED=209
+HOUDINI_SEED=283
 ROOM_COUNT=5
 ENEMY_DENSITY=0.511
 LOOT_DENSITY=3.86
 COIN_DENSITY=0.336
 HEALTH_DENSITY=0.463
 BREAKABLE_DENSITY=0.849
-EDGE_WALL_BIAS=0.835
+EDGE_WALL_BIAS=0.564
 NOISE_SCALE=0.8
 NOISE_THRESHOLD=-0.1
 MIN_ROOM_SIZE=4
@@ -59,31 +59,31 @@ MIN_PLAYER_EXIT_DIST=26.6
 # ===================================
 
 [GRID_ASCII]
-#####B###########B#######
-#########################
-B#################B######
-#############BB#BBBBB###B
-##B##########B..H..E...C#
-#############B.CC.HHC.C.#
-########B####B...HC.H...B
-##############..1111P...#
-#############B.11C.....CB
-#####B#BBBBB#B11....H...#
-#####B..E.HH.11H....HHC.B
-###B#BCC.EC.11CHE...EH..B
-###BBB.....11..C.C......B
-###BC.....11.H.H....H...#
-###B..H..11E.H.EE..HE.CHB
-###B.H.H11CHE...HEBBBBBBB
-###BC..11HE..C....B######
-###B..11...HE....CB######
-###BH11..H...E....B######
-###BHSC.....EH....B######
-###BBBBBBBBBBBBB#BB######
-B#B######################
-#########################
-####B##########B#########
-B########################
+#.#.#.#.#.#.#.B.#.#.#.#.#
+.........................
+#.#.B.#.#.#.#.#.#.#.#.#.#
+.........................
+#.#.#.B.#.#.B.#.#.#.#.#.#
+.........................
+#.#.#.#.#.#.#.#.B.B.B.B.B
+.........................
+#.#.#.#.#.#.B.#.E.....#.#
+.........................
+#.#.#.#.#.#.#.#.....1.B.#
+.........................
+#.#.#.B.B.#.#...C.1...B.#
+.........................
+#.#.#.C.....C.H.1.H...#.#
+.........................
+#.B.#.......C.1.....B.#.#
+.........................
+#.#.#.B.B.B.B.C...E.#.#.#
+.........................
+#.#.#.#.#.#.B...C...#.#.#
+.........................
+#.#.#.#.#.#.B.B.B.B.#.#.#
+.........................
+#.#.#.#.#.#.#.#.#.#.#.#.#
 
 # ===================================
 # END OF LEVEL 0001
