--- a/unity/Assets/Levels/LEVEL_0003_v1.0.0_v4.3.ini
+++ b/unity/Assets/Levels/LEVEL_0003_v1.0.0_v4.3.ini
@@ -1,13 +1,13 @@
-# === LEVEL DATASET v4.2 ===
+# === LEVEL DATASET v4.3 ===
 # Generator: Houdini 20.0.547
-# Export Date: 2025-08-18 02:45:18
+# Export Date: 2025-08-18 02:21:03
 # Encoding: UTF-8
 # Levels: 1
 # Format: Incremental IDs with Suffix
 # ===================================
 
 # ===================================
-# LEVEL 0001 : Generated Level
+# LEVEL 0003 : Generated Level
 # ===================================
 
 [CELL_TYPES]
@@ -29,9 +29,9 @@
 
 [LEVEL_CONFIG]
 VERSION=v1.0.0
-FORMAT_VERSION=v4.2
-LEVEL_NAME=Generated Level 0001
-LEVEL_ID=0001
+FORMAT_VERSION=v4.3
+LEVEL_NAME=Generated Level 0003
+LEVEL_ID=0003
 GRID_WIDTH=25
 GRID_HEIGHT=25
 
@@ -40,14 +40,14 @@ GRID_HEIGHT=25
 # ===================================
 
 [GENERATION_PARAMS]
-HOUDINI_SEED=209
+HOUDINI_SEED=261
 ROOM_COUNT=5
 ENEMY_DENSITY=0.511
 LOOT_DENSITY=3.86
 COIN_DENSITY=0.336
 HEALTH_DENSITY=0.463
 BREAKABLE_DENSITY=0.849
-EDGE_WALL_BIAS=0.835
+EDGE_WALL_BIAS=0.564
 NOISE_SCALE=0.8
 NOISE_THRESHOLD=-0.1
 MIN_ROOM_SIZE=4
@@ -59,32 +59,32 @@ MIN_PLAYER_EXIT_DIST=26.6
 # ===================================
 
 [GRID_ASCII]
-#####B###########B#######
-#########################
-B#################B######
-#############BB#BBBBB###B
-##B##########B..H..E...C#
-#############B.CC.HHC.C.#
-########B####B...HC.H...B
-##############..1111P...#
-#############B.11C.....CB
-#####B#BBBBB#B11....H...#
-#####B..E.HH.11H....HHC.B
-###B#BCC.EC.11CHE...EH..B
-###BBB.....11..C.C......B
-###BC.....11.H.H....H...#
-###B..H..11E.H.EE..HE.CHB
-###B.H.H11CHE...HEBBBBBBB
-###BC..11HE..C....B######
-###B..11...HE....CB######
-###BH11..H...E....B######
-###BHSC.....EH....B######
-###BBBBBBBBBBBBB#BB######
-B#B######################
-#########################
-####B##########B#########
-B########################
+############B############
+#########B##B####B####B##
+######B#BBB########B#####
+#B#B#F..CC#B#############
+#####..H.HB#########B####
+#####..H..B##BBB#######B#
+###BBH..HH...P.B#########
+#####CH.....H1HB#########
+####BE.H..H..1.#B#####B##
+####BC......C1H.B####B###
+#####HC.C....1F.B#######B
+####BH...H..11..B########
+####BC...H.11CECB########
+BBBB#.....11.E.CB#B######
+..C......11H..E.#######B#
+H..E.HC.11.....HB########
+.....H.11C.....H#########
+C.H...11.......CB########
+H...C11..HH..H#BB###B####
+H.H.11..BBBBBBB#####B####
+E..11...######B##########
+E.11.CECB####B##BB#######
+..S....C##B####B#B##B####
+...EEHC.####B##########B#
+...C...HB################
 
 # ===================================
-# END OF LEVEL 0001
+# END OF LEVEL 0003
 # ===================================
