--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -7,3 +7,11 @@ tensorflow>=2.6.0
 h5py>=3.1.0
 pyyaml>=5.4.1
 jupyter>=1.0.0
+mlagents==0.30.0
+stable-baselines3==2.0.0
+torch>=1.8.0
+tensorboard>=2.8.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
+pyyaml>=6.0
+opencv-python>=4.5.0
