--- a/.gitignore
+++ b/.gitignore
@@ -83,7 +83,8 @@ Thumbs.db
 
 # --- Unity Collaborate (kullanmıyorsan) ---
 .collab/
-
+.claude
 # --- Paket Cache ---
 /Packages/manifest.json
 /Packages/packages-lock.json
+Unity/ProjectSettings/McpUnitySettings.json
