--- a/python/config/bomberman_ppo_simple.yaml
+++ b/python/config/bomberman_ppo_simple.yaml
@@ -19,8 +19,8 @@ behaviors:
       extrinsic:
         gamma: 0.99
         strength: 1.0
-    max_steps: 2000000
+    max_steps: 10000
     time_horizon: 2048
-    summary_freq: 50000
+    summary_freq: 1000
     keep_checkpoints: 5
-    checkpoint_interval: 100000
+    checkpoint_interval: 5000
