--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,8 @@ unity/Packages/manifest.json
 unity/Packages/packages-lock.json
 Unity/ProjectSettings/McpUnitySettings.json
 unity/Packages/manifest.json
+Python/results/test/PlayerAgent/checkpoint.pt
+Python/results/test/PlayerAgent/PlayerAgent-1559.pt
+Python/results/test/PlayerAgent/PlayerAgent-1559.onnx
+Python/results/test/PlayerAgent.onnx
+Python/results/test/PlayerAgent/events.out.tfevents.1756238346.KNIGHT.31164.0
